--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,20 @@
     <groupId>com.frolov</groupId>
     <artifactId>mirang</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <dependencies>
+        <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+        <scope>provided</scope>
+    </dependency>
+        <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
         <dependency>
             <groupId>com.thedeanda</groupId>
             <artifactId>lorem</artifactId>
